assets/css/style.css
table, td, th,  tr {
    border-collapse: separate;
    font-size: 14px;
    text-align: center;
    padding: 5px;
  }

#yelp {
  font-size: 22px;
  text-align: left;
  padding: 5px;
  border-collapse: separate;
  height: 225px;
  overflow: auto;
  align-self: center; 
  display: none;
}

.display-4 {
  color: black;
  font-family: 'Averia Serif Libre', cursive;
}

#yelppoi {
  font-size: 22px;
  text-align: left;
  padding: 5px;
  border-collapse: separate;
  height: 225px;
  overflow: auto;
  align-self: center; 
  display: none;
  
}

#yelppoi tr:nth-child(even){
  background-color: red;
  padding: 3px;
}
#yelppoi tr:nth-child(odd){
  background-color: whitesmoke;
}
yelppoitbl {
  font-size: 22px;
  text-align: center;
  padding: 5px;
  border-collapse: separate;
  height: 225px;
  overflow: auto;
  align-self: center; 
  display: none;
}

yelppoitbl:nth-child(odd) {
  background: -webkit-linear-gradient(-45deg, rgba(183,222,237,1) 0%,
  rgba(113,206,239,1) 42%, rgba(33,180,226,1) 51%, rgba(183,222,237,1) 100%);
}

yelppoitbl:nth-child(even) {
  background: -webkit-linear-gradient(-45deg, rgba(248,80,50,1) 0%, rgba(241,111,92,1) 23%,
  rgba(246,41,12,1) 51%, rgba(240,47,23,1) 71%, rgba(231,56,39,1) 100%);
}

#yelp:nth-child(odd) {
  background: -webkit-linear-gradient(-45deg, rgba(183,222,237,1) 0%,
   rgba(113,206,239,1) 42%, rgba(33,180,226,1) 51%, rgba(183,222,237,1) 100%);
   
}

#yelp:nth-child(even) {
  background: -webkit-linear-gradient(-45deg, rgba(248,80,50,1) 0%, rgba(241,111,92,1) 23%,
   rgba(246,41,12,1) 51%, rgba(240,47,23,1) 71%, rgba(231,56,39,1) 100%);
}

#yelp:hover {
  cursor: pointer;
}

#ticket-master {
 
  display: none;
  overflow: auto;
  height: 225px;
}
#ticketmasterdata {
  font-size: 22px;
  text-align: center;
  padding: 5px;
  border: 1px solid black;
}

#ticket-master:nth-child(odd) {
  background: linear-gradient(red, yellow); 
  padding: 5px;
}

#ticket-master:nth-child(even) {
  background: linear-gradient(blue, lime);
  padding: 5px;
}

#ticket-master:hover {
  cursor: pointer;
}

#ticket-row {
  background-image: url("../../images/palm-tree-inv.jpg");

}

#weather {
  background: rgba(224, 251, 255, 0.5);
  font-size: 18px;
}

div {
    display: inline-block;
    font-size: 22px;
    font-weight: bolder;
    color: black;
    text-align: center;
    height: auto;
}

.form-row {
   background: url("../../images/palm-tree-inv.jpg");
   text-align: center;
   font-size: 16px;
   border-color: black;
    border-width: 1px;
    border-color: black;
    border-style: solid;
    border-radius: 11px;
}

.form-control {
    border-color: black;
    border-width: 1px;
    border-color: black;
    border-style: ridge;
    box-sizing: border-box;
}
.checkboxes {
  background-image: url("../../images/palm-tree.jpg");
  height:150px;
  border-radius: 15px;
}

.checkboxes input {
  height: 35px;
  width: 35px;
  position: relative;
  cursor: pointer;
}

#submit-btn {
    cursor: pointer;
    font-size: 25px;
    color: white;
    background: url("../../images/palm-tree.jpg");
    background-size: 100%;
    height: auto;
    font-weight: bolder;
    border-color: black;
    border-width: 7px;
    padding: 11px;
    border-radius: 11px;
    font-style: inherit;
    text-align: center;
    -webkit-text-stroke-width: 3px;
    -webkit-text-stroke-color: black;
}

.images {
  height: 100px;
  width: 100px;
  float: left;
  margin-right: 10px;
}

.flexdisplay {
  display: flex;
  width: 80vw;
  height: 400px;
  overflow: auto;
  flex-direction: column;
  justify-content: flex-start;

}

#submit-btn:hover {

    color: yellow;
    
}

#submit-btn:active {
    background-color:red; /* When the button is clicked */
    box-shadow: 0 7px green;
    transform: translateY(4px);
  }

.container {
    font-family: Georgia, 'Times New Roman', Times, serif;
    font-size: 32px;
    color: red;
    font-weight: bolder;
}

html, body {
    text-align: center;
    font-size: 18 px;
    color: red;
    padding: 2px;
    background: url("../../images/hammock.jpg") no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}


footer {
    text-align: center;
    color:red;
    border-top: 1px solid white;
    background: transparent;
    font-weight: bolder;
}

.wrapper {
    width: 1024px;
    margin: 40px auto;
}

.jumbotron {
  background: rgba(224, 251, 255, 0.5);
}
  
@media only screen and (max-width: 980px) {
    body {
        max-width: 100%;
        height: auto;
    }
    .wrapper {
        width: 800px;
      }
}

@media only screen and (max-width: 768px) {
    body {
        max-width: 100%;
        height: auto;
    }
    .wrapper {
        width: 800px;
      }
}

@media only screen and (max-width: 640px) {
    body {
        max-width: 100%;
        height: auto;
    }
    header {
        position: static;
    }
    .wrapper {
        width: 600px;
    }
  }

